Configure backend for Railway deployment
- Add railway.json for Railway build and deployment configuration
- Update application.yml to support environment variables
- Update SecurityConfig.java to read CORS origins from env vars
- Add comprehensive RAILWAY_DEPLOYMENT.md guide

Changes enable deploying backend to Railway with:
- PostgreSQL database support
- Dynamic CORS configuration for Netlify frontend
- Environment-based configuration for production
- Support for Railway's PORT and DATABASE_URL env vars